# statuspage-exporter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml  rust-clippy.yml
src/: main.rs  scraper.rs  scrapers.rs
src/scrapers/: akamai.rs  mod.rs
