[package]
name = "statuspage-exporter"
version = "0.4.6"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "query", "tokio"] }
anyhow = { version = "1", features = ["backtrace"] }
chrono = { version = "^0.4", features = ["serde"] }
lazy_static = "1"
url = { version = "2", features = ["serde"] }
prometheus = { version = "^0.13", features = ["process"] }
reqwest = { version = "^0.12", default-features = false, features = ["gzip", "json", "rustls-tls"] }
serde = { version = "~1", features = ["derive"] }
strum = { version = "^0.27", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros", "parking_lot"] }
tracing = "^0.1"
tracing-error = { version = "^0.2", features = ["traced-error"] }
tracing-subscriber = { version = "^0.3", features = ["env-filter", "json", "parking_lot", "smallvec"] }


[profile.release]
lto = true
incremental = false
codegen-units = 1
panic = "abort"
strip = true
